--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.2",
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
+    "mongodb": "^3.0.2",
     "mongoose": "^5.0.6",
     "morgan": "^1.9.0"
   }
